--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body onload="main()">
+    <!--Division de tres columnas con Bootstrap-->
     <div class="row">
         <div class="col-sm-3" style="background-color:lavender;">
             <p id="clientes"></p>
