Add pop function on clientes:Array, started by the last element
Create a new funtion to print Array, and a controller to lenght of clientes:Array

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <p id="precio"></p>
         </div>
         <div class="col-sm-3" style="background-color:lightseagreen;">
+            <button id="btnComprar" onclick="comprar()">Comprar</button>
         </div>
     </div>
 </body>
