add recaudacion Arrary to save price which movie

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </div>
         <div class="col-sm-3" style="background-color:lightseagreen;">
             <button id="btnComprar" onclick="comprar()">Comprar</button>
+            <p id="pRecaudacion"></p>
+            <p id="pRecaudacion2"></p>
         </div>
     </div>
 </body>
